kubespray/inventory/mycluster/nw-multitool.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nw-mt
  name: nw-mt
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nw-mt
  template:
    metadata:
      labels:
        app: nw-mt
    spec:
      containers:
        - image: praqma/network-multitool:alpine-extra
          imagePullPolicy: IfNotPresent
          name: network-multitool
      terminationGracePeriodSeconds: 30
