kubespray/inventory/mycluster/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-node
  name: hello-node
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-node
  template:
    metadata:
      labels:
        app: hello-node
    spec:
      containers:
        - image: k8s.gcr.io/echoserver:1.4
          imagePullPolicy: IfNotPresent
          name: hello-kube
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: hello-node
  namespace: default
spec:
  ports:
    - name: hello-node
      port: 8080
  selector:
    app: hello-node
