kubespray/inventory/mycluster/netwokr_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-node
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
