kubespray/inventory/mycluster/nwpo_to_hellonode.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-node
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: hello-node
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nw-mt
      ports:
        - protocol: TCP
          port: 8080
